RESOLVED FIXED33228
Line boxes aren't cleared when the last child is removed from a RenderBlock
https://bugs.webkit.org/show_bug.cgi?id=33228
Summary Line boxes aren't cleared when the last child is removed from a RenderBlock
James Robinson
Reported 2010-01-05 13:07:25 PST
When the last child is removed from a RenderBlock its line box list is not cleared until the next layout pass. This is slightly wasteful and makes the fullLayout flag in RenderBlock::layoutInlineChildren() harder to reason about.
Attachments
Clears lineboxes when last child is deleted (2.03 KB, patch)
2010-01-05 13:09 PST, James Robinson
no flags
Adds the childrenInline() check (2.05 KB, patch)
2010-01-05 13:28 PST, James Robinson
no flags
James Robinson
Comment 1 2010-01-05 13:09:00 PST
Created attachment 45924 [details] Clears lineboxes when last child is deleted
WebKit Review Bot
Comment 2 2010-01-05 13:10:15 PST
style-queue ran check-webkit-style on attachment 45924 [details] without any errors.
Dave Hyatt
Comment 3 2010-01-05 13:16:31 PST
Comment on attachment 45924 [details] Clears lineboxes when last child is deleted Seems like this should be: if (childrenInline() && !firstChild()) just to not waste time calling into lineBoxes() in the block child removal case? r=me
James Robinson
Comment 4 2010-01-05 13:28:07 PST
Created attachment 45928 [details] Adds the childrenInline() check
WebKit Review Bot
Comment 5 2010-01-05 13:29:15 PST
style-queue ran check-webkit-style on attachment 45928 [details] without any errors.
Dave Hyatt
Comment 6 2010-01-05 13:30:57 PST
Comment on attachment 45928 [details] Adds the childrenInline() check r=me
Eric Seidel (no email)
Comment 7 2010-01-05 13:34:10 PST
Comment on attachment 45924 [details] Clears lineboxes when last child is deleted Obsoleting this old patch.
WebKit Commit Bot
Comment 8 2010-01-05 16:08:06 PST
Comment on attachment 45928 [details] Adds the childrenInline() check Clearing flags on attachment: 45928 Committed r52838: <http://trac.webkit.org/changeset/52838>
WebKit Commit Bot
Comment 9 2010-01-05 16:08:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.