2010-01-05  James Robinson  <jamesr@chromium.org>

Reviewed by David Hyatt.

        Cleans up line box clearing when a RenderBlock loses its last child.
        https://bugs.webkit.org/show_bug.cgi?id=33228

        The 'fullLayout' flag in RenderBlock::layoutInlineChildren() is pretty vague, hopefully this will be easier for the next person to figure out.

        No new tests.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::removeChild):
        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::layoutInlineChildren):

Canonical link: https://commits.webkit.org/44250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52838 268f45cc-cd09-0410-ab3c-d52691b4dbfc